--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django
+Pillow
 Fabric
 argparse
 boto
@@ -14,7 +15,7 @@ python-memcached
 pytz
 six
 sqlparse
-django-markdown-deux
+django-markdownify
 facebook-sdk
 django-environ
 social-auth-app-django
@@ -26,3 +27,4 @@ requests
 requests-cache
 django-request
 django-smuggler
+django-defender
