change youtube cache backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,9 @@ django-crontab
 beautifulsoup4
 markdown
 requests
-requests-cache
 django-request
 django-smuggler
 django-defender
 tarsafe
 django-modeltranslation
+redis-py
