feat(deployment): Adjustments, media preview :wrench:

--- a/FreiRui.uwsgi.ini
+++ b/FreiRui.uwsgi.ini
@@ -1,3 +1,6 @@
+# This is wrong, unused as well, the correct way
+# would be [uwsgi], not [ uwsgi ]. However, this
+# gile ain't working anyway, so it's not a problem.
 [ uwsgi ]
 
 # cd /var/www/python/FreiRui && uwsgi --uid 33 -s localhost:8000 --ini /var/www/python/FreiRui/FreiRui.uwsgi.ini --pypy-lib /var/www/python/pypy3.9-v7.3.9-linux64/bin/libpypy3.9-c.so --pypy-setup /var/www/python/pypy_setup.py --pypy-wsgi-file /var/www/python/FreiRui/FreiRui/wsgi.py
