hotfix(infra): Fix uwsgi and nginx stuff :hammer:

--- a/FreiRui.uwsgi.ini
+++ b/FreiRui.uwsgi.ini
@@ -1,11 +1,14 @@
 # This is wrong, unused as well, the correct way
 # would be [uwsgi], not [ uwsgi ]. However, this
 # gile ain't working anyway, so it's not a problem.
-[ uwsgi ]
+
+# UPDATE: Now we are using this file
+[uwsgi]
 
 # cd /var/www/python/FreiRui && uwsgi --uid 33 -s localhost:8000 --ini /var/www/python/FreiRui/FreiRui.uwsgi.ini --pypy-lib /var/www/python/pypy3.9-v7.3.9-linux64/bin/libpypy3.9-c.so --pypy-setup /var/www/python/pypy_setup.py --pypy-wsgi-file /var/www/python/FreiRui/FreiRui/wsgi.py
 
 # run as www-data
+# sometimes changing that to root to generate RO pycache
 uid             = 33
 http            = :8000
 
@@ -17,9 +20,10 @@ max-requests    = 1000
 daemonize       = /var/log/uwsgi/FreiRui.log 
 
 # the base directory (full path)
-chdir           = /var/www/python/FreiRui
+chdir           = /var/www/python/Frei_Rui
 
 # static/ media
+# Handled like a boss by nginx
 # route         = /static/(.*)$ static:/var/www/python/FreiRui/static/$1
 # route         = /media/(.*)$ static:/var/www/python/FreiRui/media/$1
 
@@ -27,6 +31,12 @@ chdir           = /var/www/python/FreiRui
 # module                = 
 
 # the virtualenv (full path)
+pypy-lib /var/www/python/pypy3.9-v7.3.9-linux64/bin/libpypy3.9-c.so
+# To make uwsgi work with pypy (like a boss again)
+# This file had to be changed, some async reserved keyword was
+# breaking pypy 3.9
+pypy-setup /var/www/python/pypy_setup.py
+pypy-wsgi-file /var/www/python/Frei_Rui/FreiRui/wsgi.py
 # pypy-home     = /var/www/python/pypy3.9-v7.3.9-linux64
 # pypy-lib      = /var/www/python/pypy3.9-v7.3.9-linux64/bin/libpypy3.9-c.so
 # pypy-setup    = /var/www/python/pypy_setup.py
@@ -38,9 +48,9 @@ chdir           = /var/www/python/FreiRui
 # master
 master          = true
 # maximum number of worker processes
-processes       = 8
+processes       = 4
 # the socket (use the full path to be safe
-http-socket     = 127.0.0.1:8000
+socket     = unix:///tmp/Frei_Rui.socket
 # ... with appropriate permissions - may be needed
-# chmod-socket     =664
+chmod-socket     =664
 # clear environment on exit
