hotfix(SEO): Cache + FCP optimization :screwdriver:

--- a/FreiRui.uwsgi.ini
+++ b/FreiRui.uwsgi.ini
@@ -10,14 +10,21 @@
 # run as www-data
 # sometimes changing that to root to generate RO pycache
 uid             = 33
-http            = :8000
+gid             = 33
+# http            = :8000
+# uds socket
+
 
 module          = FreiRui.wsgi:application
 master          = True
 pidfile         = /tmp/FreiRui-master.pid
 vacuum          = True
 max-requests    = 1000
-daemonize       = /var/log/uwsgi/FreiRui.log 
+daemonize       = /var/log/uwsgi/FreiRui.log
+
+harakiri = 20 # respawn processes taking more than 20 seconds
+# limit-as = 128 # limit the project to 128 MB
+max-requests = 5000 # respawn processes after serving 5000 requests
 
 # the base directory (full path)
 chdir           = /var/www/python/Frei_Rui
@@ -31,26 +38,27 @@ chdir           = /var/www/python/Frei_Rui
 # module                = 
 
 # the virtualenv (full path)
-pypy-lib /var/www/python/pypy3.9-v7.3.9-linux64/bin/libpypy3.9-c.so
 # To make uwsgi work with pypy (like a boss again)
 # This file had to be changed, some async reserved keyword was
 # breaking pypy 3.9
-pypy-setup /var/www/python/pypy_setup.py
-pypy-wsgi-file /var/www/python/Frei_Rui/FreiRui/wsgi.py
-# pypy-home     = /var/www/python/pypy3.9-v7.3.9-linux64
-# pypy-lib      = /var/www/python/pypy3.9-v7.3.9-linux64/bin/libpypy3.9-c.so
+pypy-setup    = /var/www/python/pypy_setup.py
+pypy-wsgi-file = /var/www/python/Frei_Rui/FreiRui/wsgi.py
+pypy-home     = /var/www/python/pypy3.9-v7.3.9-linux64/lib/pypy3.9
+pypy-lib      = /var/www/python/pypy3.9-v7.3.9-linux64/bin/libpypy3.9-c.so
 # pypy-setup    = /var/www/python/pypy_setup.py
 # Django's wsgi file
 # pypy-wsgi-file        = FreiRui/FreiRui/wsgi.py
-# pypy-wsgi     = FreiRui.wsgi:FreiRui
+pypy-wsgi     = FreiRui.wsgi:application
 
 # process-related settings
 # master
 master          = true
 # maximum number of worker processes
-processes       = 4
+processes       = %k
+threads         = 4
 # the socket (use the full path to be safe
-socket     = unix:///tmp/Frei_Rui.socket
+socket     = /tmp/FreiRui.sock
 # ... with appropriate permissions - may be needed
-chmod-socket     =664
+chmod-socket     = 666
+chown-socket=www-data:www-data
 # clear environment on exit
